--- a/text.css
+++ b/text.css
@@ -5,6 +5,7 @@
   width:280px;
   line-height:25px;
   margin-bottom:0;
+  margin-bottom:20;
 
 }
 .sub-info{
@@ -14,6 +15,7 @@
   margin-top:0;
   margin-top:6px;
   margin-bottom:0;
+  margin-top:8px;
 }
 .text-name{
   font-family:Roboto;
@@ -22,6 +24,7 @@
   margin-top:0;
   margin-top:20;
   margin-bottom:0;
+  margin-top:10px;
 }
 .text-descrip{
   font-family:Roboto;
@@ -32,6 +35,8 @@
   margin-top:20;
   line-height:20px;
   width:260;
+  margin-bottom:20;
+  margin-top:20px;
 }
 .apple-logo{
   background-color:red;
